k8s/services/matrix/app/media-repo/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-repo
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: media-repo
          image: turt2live/matrix-media-repo
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
            - name: metrics
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            httpGet:
              port: http
              path: /healthz
          readinessProbe:
            httpGet:
              port: http
              path: /healthz
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
            - name: tmp
              mountPath: /tmp/media_repo_s3_upload
      volumes:
        - name: config
          secret:
            secretName: media-repo-config
        - name: tmp
          emptyDir: {}
