k8s/services/matrix/app/media-repo/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: media-repo
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
