k8s/services/matrix/app/media-repo/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: media-repo
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - matrix.lama-corp.space
  rules:
    - matches:
        - path:
            value: /_matrix/media
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: lama-corp.space
      backendRefs:
        - name: media-repo
          port: 80
